--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 anyio==3.6.2
+certifi==2022.12.7
 click==8.1.3
+dnspython==2.3.0
 fastapi==0.92.0
 h11==0.14.0
 httptools==0.5.0
@@ -7,6 +9,7 @@ idna==3.4
 mypy==1.0.0
 mypy-extensions==1.0.0
 pydantic==1.10.4
+pymongo==4.3.3
 python-dotenv==0.21.1
 PyYAML==6.0
 sniffio==1.3.0
