--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ PyYAML==6.0
 sniffio==1.3.0
 starlette==0.25.0
 tomli==2.0.1
-typing-extensions==4.4.0
+typing_extensions==4.4.0
 uvicorn==0.20.0
 watchfiles==0.18.1
 websockets==10.4
