--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 ATLAS_URI=mongodb+srv://mincykeladmin:KDG3aB8vigdCMFR@cluster0.8qxwnnc.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=mincykel
+JWT_SECRET=uhMWrn3dTGxqGWFV
+TWILLIO_ACCOUNT_SID=ACf19d65f227553ba1aef9a56d66ecba7b
+TWILLIO_AUTH_TOKEN=280facd2b991cd4dccd3757798b39ddc
+TWILLIO_SENDER_PHONE_NUMBER=+19804432254
