--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,12 @@ idna==3.4
 mypy==1.0.0
 mypy-extensions==1.0.0
 pydantic==1.10.4
+PyJWT==1.7.1
 pymongo==4.3.3
 python-dotenv==0.21.1
+python-multipart==0.0.5
 PyYAML==6.0
+six==1.16.0
 sniffio==1.3.0
 starlette==0.25.0
 tomli==2.0.1
