--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 ATLAS_URI=mongodb+srv://mincykeladmin:KDG3aB8vigdCMFR@cluster0.8qxwnnc.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=mincykel
+AWS_ACCESS_KEY_ID=AKIAZPKG7JGH6DRFOHWS
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=eu-north-1
+AWS_BUCKET_NAME=mincykel
 JWT_SECRET=uhMWrn3dTGxqGWFV
 TWILLIO_ACCOUNT_SID=ACf19d65f227553ba1aef9a56d66ecba7b
 TWILLIO_AUTH_TOKEN=280facd2b991cd4dccd3757798b39ddc
