Added JWT expiary time option to .env

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ AWS_SECRET_ACCESS_KEY=hWzhpgNPpyga4wzNtlkwSwgZF0kJ63I6g8zLjg6g
 AWS_DEFAULT_REGION=eu-north-1
 AWS_BUCKET_NAME=mincykel
 JWT_SECRET=uhMWrn3dTGxqGWFV
+JWT_EXPIARY_TIME_MINS=60
 SMS_ENABLED=YES
 TWILLIO_ACCOUNT_SID=ACf19d65f227553ba1aef9a56d66ecba7b
 TWILLIO_AUTH_TOKEN=280facd2b991cd4dccd3757798b39ddc
