--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ AWS_DEFAULT_REGION=eu-north-1
 AWS_BUCKET_NAME=mincykel
 JWT_SECRET=uhMWrn3dTGxqGWFV
 JWT_EXPIARY_TIME_MINS=60
-SMS_ENABLED=NO
+SMS_ENABLED=YES
 TWILLIO_ACCOUNT_SID=ACf19d65f227553ba1aef9a56d66ecba7b
 TWILLIO_AUTH_TOKEN=280facd2b991cd4dccd3757798b39ddc
 TWILLIO_SENDER_PHONE_NUMBER=+19804432254
