--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
-sonar.projectKey=MinCykel
-sonar.python.version=3.10
+sonar.projectKey=minCykel-app_minCykel-backend
+sonar.organization=mincykel-app
