--- a/requirements.txt
+++ b/requirements.txt
@@ -27,9 +27,11 @@ python-dotenv==0.21.1
 python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==6.0
+raven==6.10.0
 requests==2.28.2
 rsa==4.9
 s3transfer==0.6.0
+sentry-sdk==1.21.1
 six==1.16.0
 sniffio==1.3.0
 starlette==0.25.0
